chore(repo): restructure project and add firmware CI
- Refactor main into core/services/ui_app/utils
- Improve power measurement/control (INA226 conversion-ready + power limiting)
- Add GitHub Actions CI build and tag-based firmware release

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-.vscode
+.vscode/
 
-build
-managed_components
+build/
+
+managed_components/
 dependencies.lock
+.DS_Store
+
+dist/
+
+AGENTS.md
+.doc/
+
+sdkconfig
+sdkconfig.old
