--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,15 +1,14 @@
-description: ESP-BSP SquareLine LVGL Example
-
 targets:
     - esp32c3
 
 dependencies:
-  espressif/lis2dh12: "^0.1.0"
+  espressif/lis2dh12: "^0.2.0"
   espressif/pid_ctrl: "^0.2.0"
-  idf: ">=4.4"
+  espressif/i2c_bus: "1.5.0"
+  idf: ">=5.3.0"
 
-  esp32_c3_reflow:
-    override_path: "../components/esp32_c3_reflow"
+  esp_pd_heater_bsp:
+    override_path: "../components/esp_pd_heater_bsp"
 
   Adafruit_HUSB238:
     override_path: "../components/Adafruit_HUSB238"
