feat(bsp): auto-toggle and lock LCD variant
- Add runtime LCD variant API to BSP (HSD/BOE)

- Toggle LCD variant on each boot until heating starts; lock on first UI heating

- Document usage in README

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SRC_DIRS
     "core/controller"
     "core/events"
     "core/state"
+    # core/state also contains LCD variant selection (app_lcd_variant.*)
     "services/backlight"
     "services/buzzer"
     "services/chip_temp"
